# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
