[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld-lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld-lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing-actix-web = "0.5"
secrecy = {version="0.8", features = ["serde"]}
once_cell = "1"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = {version="0.3", features = ["registry","env-filter"]}
tracing = {version="0.1", features = ["log"]}
log="0.4"
env_logger = "0.9"
config = "0.11"
actix-web = "4"
tokio = {version="1",features =["macros", "rt-multi-thread"]}
serde = {version="1", features = ["derive"]}
uuid = {version = "0.8.1", features = ["v4"]}
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features =[
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
  "offline"
]

[dev-dependencies]
reqwest = "0.11"
